# PictureVault

./: .gitignore  README.md
Android/PictureVault/: build.gradle  logo.xcf
Android/PictureVault/app/: build.gradle  proguard-rules.pro
Android/PictureVault/app/src/main/: AndroidManifest.xml
Android/PictureVault/app/src/main/java/de/smschindler/picturevault/: AppActivity.java  MyApplication.java  PermissionManager.java  Server.java  Test.java  Utilities.java
Android/PictureVault/app/src/main/java/org/baschdl/picturevault/: AppActivity.java  MyApplication.java  PermissionManager.java  Server.java  Test.java  Utilities.java
Android/PictureVault/app/src/main/res/anim/: counter_clockwise_refresh.xml
Android/PictureVault/app/src/main/res/drawable/: build_white.xml  cloud_upload_white.xml  port.xml  sync_white.xml  transparentbutton.xml
Android/PictureVault/app/src/main/res/layout/: activity_fullimage.xml  activity_libraries.xml  activity_settings.xml  activity_test.xml  activity_thumbs.xml  element_bool_setting.xml  element_imagevideo.xml  element_permission.xml  element_setting_category.xml  element_text_setting.xml  fragment_image.xml  fragment_mediacontainer.xml  fragment_video.xml  pager_image.xml  recycler_library.xml  recycler_thumb.xml
Android/PictureVault/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  values.xml
Android/PictureVault/app/src/main/res/xml/: pic_authenticator.xml  pic_syncadapter.xml
Android/PictureVault/gradle/wrapper/: gradle-wrapper.properties
Server/: PKGBUILD  picture_vault.conf  picturevault.service
Server/picture_vault/: Cargo.toml  outdated
Server/picture_vault/src/: common.rs  database.rs  handlers.rs  main.rs  maintenance.rs  media.rs  network.rs  structs.rs
Server/picture_vault/testdata/: config  video_landscape.mp4_350_lanczos3.jpg1  video_landscape.mp4_350_nearest.jpg1
(+96 files in other folders)
