[package]
name = "picture_vault"
version = "0.1.0"
authors = ["Baschdl578 <remailer1@yahoo.de>"]

[dependencies]
image = "0.19"
rexiv2 = "0.6"
lazy_static = "1.0"
base64 = "0.9"
rand = "0.4"
two-lock-queue = "0.1"
num_cpus = "1.8"
time = "0.1"
quick-xml = "0.11"
locale = "0.2"
reqwest = "0.7"
chrono = "0.4"
ascii = "0.7"
futures = "0.1"
fs_extra = "1.1"
log = "0.4"
simple-logging = "2.0"

[dependencies.mysql]
version = "12.3"
features = ["ssl"]

[dependencies.multipart]
version = "0.14"
features = ["tiny_http", "server"]

[dependencies.tiny_http]
version = "0.5"
#features = ["ssl"]
